--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RD Energy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>RD Energy — Inovação em IoT para Energia</title>
+  <style>
+    body { font-family: Arial, sans-serif; color: #333; margin:0; padding:0; }
+    header { background:#0056b3; color:#fff; padding:2rem; text-align:center; }
+    header h1 { margin:0 0 1rem; }
+    header a { background:#ffcc00; color:#000; padding:.75rem 1.5rem; margin:0 .5rem; text-decoration:none; border-radius:4px; }
+    section { padding:2rem; }
+    .cards { display:flex; flex-wrap:wrap; gap:1rem; }
+    .card { flex:1 1 calc(33% - 1rem); background:#f9f9f9; padding:1rem; border-radius:8px; }
+    footer { background:#222; color:#fff; padding:1rem; text-align:center; font-size:.875rem; }
+  </style>
 </head>
 <body>
-  <h1>Bem-vindo ao site da RD Energy</h1>
-  <p>Site em construção.</p>
+
+<header>
+  <h1>RD Energy</h1>
+  <p>Soluções IoT para eficiência e sustentabilidade no setor elétrico</p>
+  <a href="#solucoes">Nossas Soluções</a>
+  <a href="#contato">Contato</a>
+</header>
+
+<section id="sobre">
+  <h2>Sobre Nós</h2>
+  <p>Com expertise e inovação, a RD Energy está presente no desenvolvimento de soluções que tornam a gestão energética mais eficiente, sustentável e acessível.</p>
+</section>
+
+<section id="solucoes">
+  <h2>Nossas Soluções</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Telegestão de Iluminação Pública</h3>
+      <p>Controle remoto e otimização de recursos com tecnologia NB‑IoT e gestão integrada.</p>
+      <a href="#">Saiba Mais</a>
+    </div>
+    <div class="card">
+      <h3>Medição Inteligente</h3>
+      <p>Medições de água e energia com alta resolução e precisão operacional.</p>
+      <a href="#">Saiba Mais</a>
+    </div>
+    <div class="card">
+      <h3>Plataforma de Monitoramento</h3>
+      <p>Visualize, analise e gerencie seus ativos em tempo real com dashboards intuitivos.</p>
+      <a href="#">Saiba Mais</a>
+    </div>
+  </div>
+</section>
+
+<section id="contato">
+  <h2>Fale Conosco</h2>
+  <form>
+    <input type="text" placeholder="Nome" required><br><br>
+    <input type="email" placeholder="E‑mail" required><br><br>
+    <textarea placeholder="Mensagem" required></textarea><br><br>
+    <button type="submit">Enviar</button>
+  </form>
+</section>
+
+<footer>
+  <p>© 2025 RD Energy. Todos os direitos reservados.</p>
+</footer>
+
 </body>
 </html>
