--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>RD Energy — Inovação em IoT para Energia</title>
+  <title>RD Energy — Inovação em Telemdição de Energia Elétrica</title>
   <style>
     body { font-family: Arial, sans-serif; color: #333; margin:0; padding:0; }
     header { background:#0056b3; color:#fff; padding:2rem; text-align:center; }
