--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>RD Energy — Inovação em Telemdição de Energia Elétrica</title>
+  <title>RD Energy — Inovação em IoT para Energia</title>
   <style>
     body { font-family: Arial, sans-serif; color: #333; margin:0; padding:0; }
     header { background:#0056b3; color:#fff; padding:2rem; text-align:center; }
@@ -11,8 +11,10 @@
     header a { background:#ffcc00; color:#000; padding:.75rem 1.5rem; margin:0 .5rem; text-decoration:none; border-radius:4px; }
     section { padding:2rem; }
     .cards { display:flex; flex-wrap:wrap; gap:1rem; }
-    .card { flex:1 1 calc(33% - 1rem); background:#f9f9f9; padding:1rem; border-radius:8px; }
+    .card { flex:1 1 calc(50% - 1rem); background:#f9f9f9; padding:1rem; border-radius:8px; }
     footer { background:#222; color:#fff; padding:1rem; text-align:center; font-size:.875rem; }
+    input, textarea { width:100%; max-width:500px; padding:0.5rem; margin-bottom:1rem; }
+    button { padding:0.5rem 1.5rem; background:#0056b3; color:#fff; border:none; border-radius:4px; cursor:pointer; }
   </style>
 </head>
 <body>
@@ -33,11 +35,6 @@
   <h2>Nossas Soluções</h2>
   <div class="cards">
     <div class="card">
-      <h3>Telegestão de Iluminação Pública</h3>
-      <p>Controle remoto e otimização de recursos com tecnologia NB‑IoT e gestão integrada.</p>
-      <a href="#">Saiba Mais</a>
-    </div>
-    <div class="card">
       <h3>Medição Inteligente</h3>
       <p>Medições de água e energia com alta resolução e precisão operacional.</p>
       <a href="#">Saiba Mais</a>
@@ -52,10 +49,13 @@
 
 <section id="contato">
   <h2>Fale Conosco</h2>
+  <p><strong>Renan Corrêa de Moura</strong><br>
+     E-mail: <a href="mailto:renan.moura@rdenergy.com.br">renan.moura@rdenergy.com.br</a></p>
+
   <form>
-    <input type="text" placeholder="Nome" required><br><br>
-    <input type="email" placeholder="E‑mail" required><br><br>
-    <textarea placeholder="Mensagem" required></textarea><br><br>
+    <input type="text" placeholder="Nome" required><br>
+    <input type="email" placeholder="E‑mail" required><br>
+    <textarea placeholder="Mensagem" required></textarea><br>
     <button type="submit">Enviar</button>
   </form>
 </section>
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
