--- a/index.html
+++ b/index.html
@@ -1,9 +1,108 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RD Energy — Inovação em IoT para Energia</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #0056b3;
+      color: #fff;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin-bottom: 1rem;
+    }
+    header a {
+      background: #ffcc00;
+      color: #000;
+      padding: .75rem 1.5rem;
+      margin: 0 .5rem;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    section {
+      padding: 2rem;
+    }
+    .cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+    .card {
+      flex: 1 1 calc(50% - 1rem);
+      background: #f9f9f9;
+      padding: 1rem;
+      border-radius: 8px;
+    }
+    footer {
+      background: #222;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+      font-size: .875rem;
+    }
+    input, textarea {
+      width: 100%;
+      max-width: 500px;
+      padding: 0.5rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    button {
+      padding: 0.75rem 1.5rem;
+      background: #0056b3;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>RD Energy</h1>
+  <p>Soluções IoT para eficiência e sustentabilidade no setor elétrico</p>
+  <a href="#solucoes">Nossas Soluções</a>
+  <a href="#contato">Contato</a>
+</header>
+
+<section id="sobre">
+  <h2>Sobre Nós</h2>
+  <p>Com expertise e inovação, a RD Energy está presente no desenvolvimento de soluções que tornam a gestão energética mais eficiente, sustentável e acessível.</p>
+</section>
+
+<section id="solucoes">
+  <h2>Nossas Soluções</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Medição Inteligente</h3>
+      <p>Medições de água e energia com alta resolução e precisão operacional.</p>
+    </div>
+    <div class="card">
+      <h3>Plataforma de Monitoramento</h3>
+      <p>Visualize, analise e gerencie seus ativos em tempo real com dashboards intuitivos.</p>
+    </div>
+  </div>
+</section>
+
 <section id="contato">
   <h2>Fale Conosco</h2>
   <p><strong>Renan Corrêa de Moura</strong><br>
      E-mail: <a href="mailto:renan.moura@rdenergy.com.br">renan.moura@rdenergy.com.br</a></p>
 
-  <form action="https://formsubmit.co/renan.moura@rdenergy.com.br" method="POST" onsubmit="return showThankYouMessage();">
+  <form id="contato-form">
     <input type="text" name="name" placeholder="Nome" required><br>
     <input type="email" name="email" placeholder="E‑mail" required><br>
     <textarea name="message" placeholder="Mensagem" required></textarea><br>
@@ -11,9 +110,40 @@
   </form>
 </section>
 
+<footer>
+  <p>© 2025 RD Energy. Todos os direitos reservados.</p>
+</footer>
+
+<!-- Script para enviar o formulário via AJAX e mostrar popup -->
 <script>
-  function showThankYouMessage() {
-    alert("A RD Energy agradece seu contato!");
-    return true;
-  }
+  const form = document.getElementById("contato-form");
+
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    fetch("https://formsubmit.co/ajax/renan.moura@rdenergy.com.br", {
+      method: "POST",
+      headers: {
+        'Accept': 'application/json'
+      },
+      body: formData
+    })
+    .then(response => {
+      if (response.ok) {
+        alert("A RD Energy agradece seu contato!");
+        form.reset();
+      } else {
+        alert("Erro ao enviar. Por favor, tente novamente.");
+      }
+    })
+    .catch(error => {
+      alert("Erro na conexão. Tente mais tarde.");
+      console.error(error);
+    });
+  });
 </script>
+
+</body>
+</html>
