--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="cards">
     <div class="card">
       <h3>Medição Inteligente</h3>
-      <p>Medições de água e energia com alta resolução e precisão operacional.</p>
+      <p>Medições de água e energia com precisão operacional.</p>
     </div>
     <div class="card">
       <h3>Plataforma de Monitoramento</h3>
